# AI-TECH-LAB

./: .gitignore  README.md  folder-structure.sh  pyproject.toml  requirements.txt
google-adk/: api.py  sessions.db
google-adk/weather_agent/: agent.py  agent1.py
mcp-server/: README.md  test-fastapi.py  weather-server.py
